--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,11 @@ dependencies {
     // pdr library (PdfViewer)
     implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
     implementation 'com.google.firebase:firebase-firestore-ktx:24.2.1'
+
+    //image processing lib
+    implementation 'com.github.bumptech.glide:glide:4.13.2'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
